# blackbox

./: Cargo.toml  README.md
examples/: more_complex.rs  simple.rs
src/: bayesian.rs  lib.rs  parse.rs
src/smbo/: mod.rs
