[package]
name = "blackbox"
version = "0.1.0"
authors = ["Erlend Langseth <3rlendhl@gmail.com>"]
edition = "2018"

description = "Optimize blackbox functions, suitable for hyperparameter optimization"

documentation = "https://docs.rs/blackbox"
repository = "https://github.com/Ploppz/blackbox"
readme = "README.md"

# This is a list of up to five keywords that describe this crate. Keywords
# are searchable on crates.io, and you may choose any words that would
# help someone find this crate.
keywords = ["hyperparameter", "optimization", "machine", "learning"]

# This is a list of up to five categories where this crate would fit.
# Categories are a fixed list available at crates.io/category_slugs, and
# they must match exactly.
categories = ["algorithms", "science"]

license = "MIT"


[lib]
proc-macro = true

[dependencies]

syn = "0.15.27"
quote = "0.6.11"
proc-macro2 = "0.4.27"
rand = "0.6.5"
