[package]
name = "blackbox"
version = "0.1.0"
authors = ["Erlend Langseth <3rlendhl@gmail.com>"]
edition = "2018"

description = "Optimize blackbox functions, suitable for hyperparameter optimization"

documentation = "https://docs.rs/blackbox"
repository = "https://github.com/Ploppz/blackbox"
readme = "README.md"

# This is a list of up to five keywords that describe this crate. Keywords
# are searchable on crates.io, and you may choose any words that would
# help someone find this crate.
keywords = ["hyperparameter", "optimization", "machine", "learning"]

# This is a list of up to five categories where this crate would fit.
# Categories are a fixed list available at crates.io/category_slugs, and
# they must match exactly.
categories = ["algorithms", "science"]

license = "MIT"


[dependencies]
rand = "0.6.5"
itertools = "0.8.0"
rusty-machine = "0.5.4"
probability = "0.15.12"

slog = "2.4.1"
slog-term = "2.4.0"
slog-async = "2.3.0"

[dev-dependencies]
blackbox_derive = { path = "../blackbox_derive"}

